--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,15 @@
 			"email": "harmim6@gmail.com"
 		}
 	],
-	"minimum-stability": "dev",
 	"require": {
 		"php": ">= 5.3.1",
 		"ext-imagick": "*",
-		"nette/di": "~2.3.9",
-		"nette/utils": "~2.3.7",
-		"latte/latte": "~2.3.10"
+		"nette/di": "~2.0",
+		"nette/utils": "~2.0",
+		"latte/latte": "~2.0",
+		"tracy/tracy": "~2.0",
+		"nette/http": "~2.0",
+		"nette/finder": "~2.0"
 	},
 	"autoload": {
 		"psr-4": {
