--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "harmim/images",
-	"description": "Image service for Nette Framework based on ImageMagick",
-	"keywords": ["nette", "image", "imagick"],
+	"description": "Image service for Nette Framework",
+	"keywords": ["nette", "image"],
 	"type": "library",
 	"homepage": "https://github.com/harmim/images",
 	"license": "MIT",
@@ -13,12 +13,14 @@
 	],
 	"require": {
 		"php": ">= 5.6.0",
-		"ext-imagick": "*",
 		"nette/di": "~2.0",
 		"nette/utils": "~2.0",
 		"latte/latte": "~2.0",
 		"nette/http": "~2.0",
 		"nette/finder": "~2.0"
+	},
+	"require-dev": {
+		"nette/tester": "~1.0"
 	},
 	"autoload": {
 		"psr-4": {
