--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "harmim/images",
-	"description": "Image service for Nette Framework",
+	"description": "Image service for Nette Framework.",
 	"keywords": ["nette", "image"],
 	"type": "library",
 	"homepage": "https://github.com/harmim/images",
@@ -12,15 +12,17 @@
 		}
 	],
 	"require": {
-		"php": ">= 5.6.0",
-		"nette/di": "~2.0",
-		"nette/utils": "~2.0",
-		"latte/latte": "~2.0",
-		"nette/http": "~2.0",
-		"nette/finder": "~2.0"
+		"php": ">= 7.1",
+		"ext-gd": "*",
+		"ext-fileinfo": "*",
+		"nette/di": "^2.4",
+		"nette/utils": "^2.4",
+		"latte/latte": "^2.4",
+		"nette/http": "^2.4",
+		"nette/finder": "^2.4"
 	},
 	"require-dev": {
-		"nette/tester": "~1.0"
+		"nette/tester": "^1.7"
 	},
 	"autoload": {
 		"psr-4": {
