--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,65 @@
 language: php
 
 php:
-    - 7.0
     - 7.1
 
 matrix:
+    include:
+        - php: 7.1
+
+        - php: 7.1
+          env: coverage=1
+
+        - php: 7.1
+          env: codingStandard=1
+
     allow_failures:
-        - php: 7.0
+        - php: 7.1
+          env: coverage=1
 
 before_install:
-    - composer self-update
+    # Composer self update
+    - travis_retry composer self-update
 
 install:
-    - composer install --no-interaction --prefer-source
+    # Install dependencies
+
+    # Nette Tester
+    - travis_retry composer update --no-interaction --prefer-dist --prefer-lowest --prefer-stable
+
+    # Coding standard
+    - >
+      if [ "$codingStandard" ]; then
+          travis_retry composer create-project nette/code-checker ./temp/code-checker ^2.10 --no-interaction
+      fi
+
+before_script:
+    # Set Nette Tester coverage args
+    - if [ "$coverage" ]; then coverageArgs="-p phpdbg --coverage ./coverage.xml --coverage-src ./src"; fi
 
 script:
-    - ./vendor/bin/tester ./tests/
+    # Coding standard or # Nette Tester + (coverage)
+    - >
+      if [ "$codingStandard" ]; then
+          php ./temp/code-checker/src/code-checker.php -d ./src --short-arrays --strict-types;
+      else
+          ./vendor/bin/tester ./tests -s $coverageArgs
+      fi
+
+after_script:
+    # Report Code Coverage
+    - >
+      if [ "$coverage" ]; then
+        wget https://github.com/satooshi/php-coveralls/releases/download/v1.0.1/coveralls.phar
+        && php coveralls.phar --verbose --config ./tests/.coveralls.yml
+      fi
 
 after_failure:
+    # Print *.actual content
     - for i in $(find ./tests -name \*.actual); do echo "--- $i"; cat $i; echo; echo; done
+
+sudo: false
+
+cache:
+    directories:
+        - $HOME/.composer/cache
