--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,10 @@
 		"psr-4": {
 			"Harmim\\Images\\": "src/"
 		}
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"Harmim\\Tests\\": "tests/"
+		}
 	}
 }
