--- a/.travis.yml
+++ b/.travis.yml
@@ -24,13 +24,13 @@ before_install:
 install:
     # Install dependencies
 
-    # Nette Tester
-    - travis_retry composer update --no-interaction --prefer-dist --prefer-lowest --prefer-stable
+    # Nette Tester, Nette Coding Standard
+    - travis_retry composer update --no-interaction --prefer-dist --prefer-stable
 
     # Coding standard
     - >
       if [ "$codingStandard" ]; then
-          travis_retry composer create-project nette/code-checker ./temp/code-checker ^2.10 --no-interaction
+        travis_retry composer create-project nette/code-checker temp/code-checker ^2.10 --no-interaction
       fi
 
 before_script:
@@ -38,12 +38,13 @@ before_script:
     - if [ "$coverage" ]; then coverageArgs="-p phpdbg --coverage ./coverage.xml --coverage-src ./src"; fi
 
 script:
-    # Coding standard or # Nette Tester + (coverage)
+    # Coding standard or Nette Tester + (coverage)
     - >
       if [ "$codingStandard" ]; then
-          php ./temp/code-checker/src/code-checker.php -d ./src --short-arrays --strict-types;
+        php temp/code-checker/src/code-checker.php --short-arrays --strict-types
+        composer cs
       else
-          ./vendor/bin/tester ./tests -s $coverageArgs
+          vendor/bin/tester tests -s $coverageArgs
       fi
 
 after_script:
@@ -51,12 +52,12 @@ after_script:
     - >
       if [ "$coverage" ]; then
         wget https://github.com/satooshi/php-coveralls/releases/download/v1.0.1/coveralls.phar
-        && php coveralls.phar --verbose --config ./tests/.coveralls.yml
+        php coveralls.phar --verbose --config tests/.coveralls.yml
       fi
 
 after_failure:
     # Print *.actual content
-    - for i in $(find ./tests -name \*.actual); do echo "--- $i"; cat $i; echo; echo; done
+    - for i in $(find tests -name \*.actual); do echo "--- $i"; cat $i; echo; echo; done
 
 sudo: false
 
