--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
 		"nette/finder": "^2.4"
 	},
 	"require-dev": {
-		"nette/tester": "^1.7"
+		"nette/tester": "^1.7",
+		"nette/coding-standard": "^0.2"
 	},
 	"autoload": {
 		"psr-4": {
@@ -33,5 +34,9 @@
 		"psr-4": {
 			"Harmim\\Tests\\": "tests/"
 		}
+	},
+	"scripts": {
+		"cs": "vendor/bin/ecs check src tests --config vendor/nette/coding-standard/coding-standard-php71.neon",
+		"fs": "vendor/bin/ecs check src tests --config vendor/nette/coding-standard/coding-standard-php71.neon --fix"
 	}
 }
