--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
 		{
 			"name": "Dominik Harmim",
 			"email": "harmim6@gmail.com",
-			"homepage": "http://www.harmim.cz/",
+			"homepage": "https://www.harmim.cz",
 			"role": "Developer"
 		}
 	],
 	"require": {
-		"php": ">= 7.1",
+		"php": ">=7.4",
 		"ext-gd": "*",
 		"ext-fileinfo": "*",
 		"nette/di": "^2.4",
@@ -24,8 +24,7 @@
 		"nette/finder": "^2.4"
 	},
 	"require-dev": {
-		"nette/tester": "^2.0",
-		"nette/coding-standard": "^0.7"
+		"nette/tester": "^2.0"
 	},
 	"autoload": {
 		"psr-4": {
@@ -36,9 +35,5 @@
 		"psr-4": {
 			"Harmim\\Tests\\": "tests/"
 		}
-	},
-	"scripts": {
-		"cs": "vendor/bin/ecs check src tests --config vendor/nette/coding-standard/coding-standard-php71.neon",
-		"fs": "vendor/bin/ecs check src tests --config vendor/nette/coding-standard/coding-standard-php71.neon --fix"
 	}
 }
