--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -1,11 +1,11 @@
-name: Build
+name: Static Analysis
 
 on: [push, pull_request]
 
 jobs:
-  build:
-    name: Build
+  phpstan:
+    name: PHPStan
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: make CI=1
+      - run: make phpstan CI=1
