--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,5 +1,3 @@
-# Author: Dominik Harmim <harmim6@gmail.com>
-
 name: Tests
 
 on: [push, pull_request]
@@ -23,5 +21,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: |
-          echo "repo_token: ${{ secrets.GITHUB_TOKEN }}" >> tests/.coveralls.github-actions.yml
+          echo "repo_token: ${{ secrets.GITHUB_TOKEN }}" >> \
+            tests/.coveralls.github-actions.yml
           make tests-coverage CI=1
