--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,10 @@
 	},
 	"require-dev": {
 		"nette/application": "^3.1",
-		"nette/tester": "^2.5"
+		"nette/tester": "^2.5",
+		"phpstan/phpstan-deprecation-rules": "~1.1.3",
+		"phpstan/phpstan-nette": "~1.2.9",
+		"phpstan/phpstan-strict-rules": "~1.5.1"
 	},
 	"suggest": {
 		"nette/application": "To use the 'Harmim\\Images\\TImageStorage' trait."
